--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
 
         <activity android:name=".HomeActivity" />
         <activity android:name=".SignUpActivity" />
+        <activity android:name=".CartActivity" />
 
         <activity android:name=".SignInActivity"
             android:exported="true">
