--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         <activity android:name=".HomeActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".CartActivity" />
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".QuizActivity" />
 
         <activity android:name=".SignInActivity"
             android:exported="true">
