--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,9 @@ retrofit = "2.9.0" # Add this line
 glide = "4.12.0"
 recyclerview = "1.4.0"
 okhttp = "4.9.3"
+cardview = "1.0.0"
+
+
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -27,6 +30,9 @@ glide-compiler = { group = "com.github.bumptech.glide", name = "compiler", versi
 recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
 okhttp-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
+stripe = { group = "com.stripe", name = "stripe-android", version = "21.18.0" }
+cardview = { group = "androidx.cardview", name = "cardview", version.ref = "cardview" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
