--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,18 @@
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
 
-
-        <activity android:name=".HomeActivity" />
-        <activity android:name=".SignUpActivity" />
         <activity android:name=".CartActivity" />
+        <activity android:name=".CheckoutActivity" />
+        <activity android:name=".HomeActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".QuizActivity" />
+        <activity android:name=".ResultActivity" />
+        <activity android:name=".RoutineDetailActivity" />
+        <activity android:name=".SignUpActivity" />
+        <activity android:name=".SuccessActivity" />
+
+
+
 
         <activity android:name=".SignInActivity"
             android:exported="true">
