--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".CartActivity" />
         <activity android:name=".CheckoutActivity" />
         <activity android:name=".HomeActivity" />
+        <activity android:name=".OrderDetailActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".QuizActivity" />
         <activity android:name=".ResultActivity" />
