Manager Order, Promotion

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
         <activity android:name=".manager.ManagerOrdersActivity" />
 
         <activity android:name=".manager.ManagerPromotionsActivity" />
+<!--        <activity android:name=".manager.CreatePromotionActivity" />-->
+        <activity android:name=".manager.EditPromotionActivity" />
+
+
         <activity android:name=".manager.ManagerRoutinesActivity" />
 
         <activity android:name=".manager.ManagerProductsActivity" />
